# scratch

./: .gitignore  README.md  models.py  pyproject.toml
src/: CustomDecisionTree.py  CustomLinearRegression.py  CustomLogisticRegression.py  CustomRandomForestClassifier.py  models.py
test/: test_decision_tree.py  test_linear_regression.py  test_logistic_regression.py
utils/: classes.py  functions.py
