[tool.poetry]
name = "scratch"
version = "0.1.0"
description = ""
authors = ["Michael Fuest <ge69fuh@mytum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.21.4"
pytest = "^6.2.5"
scikit-learn = "^1.2.2"
statsmodels = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
